# clank

./: .gitignore  README.md
backend/: .gitignore  .golangci.yaml  api.air.toml  cli.air.toml  go.mod  go.sum  worker.air.toml
engine/: .gitignore  pyproject.toml
engine/artifacts/aggregator/issue_aggregator/: issue_merger.json
engine/artifacts/processor/: review_extractor.json
engine/artifacts/processor/issue_extractor/: issue_generator.json
engine/artifacts/processor/suggestion_extractor/: info_inferrer.json  suggestion_generator.json
engine/artifacts/translator/: language_detector.json
engine/src/: main.py
engine/src/aggregator/: __init__.py  aggregator.py  endpoints.py  issue_merger.py  issue_similarity_discernor.py  suggestion_merger.py  suggestion_similarity_discernor.py
engine/src/common/: commons.py  utils.py
engine/src/config/: config.py
engine/src/exception_handler/: __init__.py  exception_handler.py
engine/src/health/: __init__.py  endpoints.py
engine/src/logger_middleware/: logger_middleware.py
engine/src/processor/: __init__.py  endpoints.py  issue_extractor.py  processor.py  review_extractor.py  suggestion_extractor.py
engine/src/translator/: __init__.py  endpoints.py  feedback_translator.py  language_detector.py  translator.py
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.cjs  .stylelintrc.cjs  .tailwindrc.cjs  components.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  wrangler.toml
infra/: .gitignore
research/: .gitignore  README.md  aggregator.ipynb  cleaner.ipynb  collector.ipynb  labeler.ipynb  processor.ipynb  pyproject.toml  sampler.ipynb  translator.ipynb
research/artifacts/collector/: perspectives.json
research/artifacts/feedback_translator/: labeled_few_shot.json  zero_shot.json
research/artifacts/feedbacks/: amazon.json  app_store.json  cleaned.json  labeled.json  test.json  trustpilot.json
research/artifacts/issue_aggregator/issue_similarity_discernor/: labeled_few_shot.json
research/artifacts/issue_extractor/info_inferrer/: labeled_few_shot.json
research/artifacts/language_detector/: zero_shot.json
research/artifacts/suggestion_aggregator/suggestion_merger/: labeled_few_shot.json
research/artifacts/suggestion_aggregator/suggestion_similarity_discernor/: labeled_few_shot.json
research/resources/: amazon_languages.json  app_store_languages.json  app_store_locations.json  docker-compose.yaml  ipywidgets.css  pgadmin4.json  play_store_languages.json  postgres-init.sh  supported_amazon_languages.json  supported_amazon_locations.json  supported_app_store_languages.json  supported_app_store_locations.json  supported_play_store_languages.json  supported_play_store_locations.json
scripts/: .gitignore  __init__.py  backend.py  common.py  engine.py  envs.py  infra.py  (+3 more)
(+378 files in other folders)
